force-app/main/default/objects/Holiday__c/Holiday__c.object-meta.xml
<CustomObject>
    <label>Holiday</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Holiday</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>