force-app/main/default/objects/Holiday__c/fields/ds__c.field-meta.xml
<CustomField>
    <fullName>ds__c</fullName>
    <label>ds</label>
    <type>Date</type>
</CustomField>