force-app/main/default/objects/Holiday__c/fields/holiday__c.field-meta.xml
<CustomField>
    <fullName>holiday__c</fullName>
    <label>holiday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>